added pytorch code to hw3

--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "available-morgan",
+   "id": "harmful-logging",
    "metadata": {},
    "source": [
     "### Problem 1 (50 points) \n",
@@ -57,6 +57,126 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "divine-setup",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0., -4.], dtype=float32)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A simple example of using PyTorch for gradient descent\n",
+    "\n",
+    "import torch as t\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "# Define a variable, make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
+    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
+    "\n",
+    "# Define a loss\n",
+    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
+    "\n",
+    "# Take gradient\n",
+    "loss.backward()\n",
+    "\n",
+    "# Check the gradient. numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
+    "x.grad.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "positive-starter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2., -6.], dtype=float32)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's examine the gradient at a different x.\n",
+    "x.data = t.tensor([2.0, 1.0])\n",
+    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
+    "loss.backward()\n",
+    "x.grad.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "infectious-remark",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.        1.9999971]\n",
+      "8.185452e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here is a code for gradient descent without line search\n",
+    "\n",
+    "import torch as t\n",
+    "from torch.autograd import Variable\n",
+    "\n",
+    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
+    "\n",
+    "# Fix the step size\n",
+    "a = 0.01\n",
+    "\n",
+    "# Start gradient descent\n",
+    "for i in range(1000):  # TODO: change the termination criterion\n",
+    "    loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # no_grad() specifies that the operations within this context are not part of the computational graph, i.e., we don't need the gradient descent algorithm itself to be differentiable with respect to x\n",
+    "    with t.no_grad():\n",
+    "        x -= a * x.grad\n",
+    "        \n",
+    "        # need to clear the gradient at every step, or otherwise it will accumulate...\n",
+    "        x.grad.zero_()\n",
+    "        \n",
+    "print(x.data.numpy())\n",
+    "print(loss.data.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "painful-climb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yren32\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
