--- a/Homework/Homework3.ipynb
+++ b/Homework/Homework3.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "harmful-logging",
-   "metadata": {},
    "source": [
     "### Problem 1 (50 points) \n",
     "\n",
@@ -56,25 +54,46 @@
     "\n",
     "\n",
     "\n"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Problem 2: Bayesian Optimization\n",
+    "import sklearn.gaussian_process as gp\n",
+    "import numpy as np\n",
+    "\n",
+    "def objective(x, mean = 0, var = 0.1):\n",
+    "    '''\n",
+    "    x : 2x1 vector of a sample in the domain of interest\n",
+    "    mean : scalar mean for iid noise term\n",
+    "    var : scalar variance for iid noise term\n",
+    "    '''\n",
+    "    noise = np.random.normal(mean, var)    \n",
+    "    return ((4 - (2.1*(x[0]**2)) + ((x[0]**4)/3))*(x[0]**2)) + (x[0]*x[1]) + ((-4 + 4*x[1]**2)*x[1]**2) + noise\n",
+    "\n",
+    "\n",
+    "\n",
+    "x1 = np.random.uniform(-3,3,5)\n",
+    "x2 = np.random.uniform(-2,2,5)\n",
+    "X = np.asarray([[x1],[x2]]).transpose().squeeze(1)\n",
+    "Y = np.asarray([objective(x) for x in X])\n",
+    "\n",
+    "kernel = gp.kernels.RBF()\n",
+    "model = gp.GaussianProcessRegressor(kernel=kernel,\n",
+    "                                    alpha=1e-4,\n",
+    "                                    n_restarts_optimizer=0,\n",
+    "                                    normalize_y=True)\n",
+    "model.fit(X,Y)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "divine-setup",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0., -4.], dtype=float32)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# A simple example of using PyTorch for gradient descent\n",
     "\n",
@@ -92,48 +111,48 @@
     "\n",
     "# Check the gradient. numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
     "x.grad.numpy()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 0., -4.], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "positive-starter",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2., -6.], dtype=float32)"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Let's examine the gradient at a different x.\n",
     "x.data = t.tensor([2.0, 1.0])\n",
     "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
     "loss.backward()\n",
     "x.grad.numpy()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 2., -6.], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "infectious-remark",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.        1.9999971]\n",
-      "8.185452e-12\n"
-     ]
-    }
-   ],
    "source": [
     "# Here is a code for gradient descent without line search\n",
     "\n",
@@ -159,24 +178,18 @@
     "        \n",
     "print(x.data.numpy())\n",
     "print(loss.data.numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "painful-climb",
-   "metadata": {},
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "C:\\Users\\yren32\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
+      "[1.        1.9999971]\n",
+      "8.185452e-12\n"
      ]
     }
    ],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
