--- a/Homework/Homework3.ipynb
+++ b/Homework/Homework3.ipynb
@@ -64,6 +64,7 @@
     "# Problem 2: Bayesian Optimization\n",
     "import sklearn.gaussian_process as gp\n",
     "import numpy as np\n",
+    "from scipy.stats import norm\n",
     "\n",
     "def objective(x, mean = 0, var = 0.1):\n",
     "    '''\n",
@@ -75,18 +76,45 @@
     "    return ((4 - (2.1*(x[0]**2)) + ((x[0]**4)/3))*(x[0]**2)) + (x[0]*x[1]) + ((-4 + 4*x[1]**2)*x[1]**2) + noise\n",
     "\n",
     "\n",
+    "def expected_improvement(X_, X, model, k = 0.01):\n",
+    "    Y_mu, Y_sigma = model.predict(X, return_std = True)\n",
+    "    Y__, _ = model.predict(X_)\n",
+    "    Y_sigma  = Y_sigma.reshape(-1,1)\n",
+    "    \n",
+    "    # Find the best value of predicted f(x) among the old samples\n",
+    "    y_best = np.max(Y__)\n",
+    "    if Y_sigma == 0.0:\n",
+    "        ei = 0\n",
+    "        return ei\n",
+    "    else:\n",
+    "        Z = (Y_mu - y_best - k)/Y_sigma\n",
+    "        ei = ((Y_mu - y_best - k)*norm.cdf(Z)) + (Y_sigma*norm.pdf(Z))\n",
+    "        return ei\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "x1 = np.random.uniform(-3,3,5)\n",
     "x2 = np.random.uniform(-2,2,5)\n",
     "X = np.asarray([[x1],[x2]]).transpose().squeeze(1)\n",
     "Y = np.asarray([objective(x) for x in X])\n",
     "\n",
-    "kernel = gp.kernels.RBF()\n",
+    "kernel = gp.kernels.RBF(length_scale=  )\n",
     "model = gp.GaussianProcessRegressor(kernel=kernel,\n",
     "                                    alpha=1e-4,\n",
     "                                    n_restarts_optimizer=0,\n",
     "                                    normalize_y=True)\n",
-    "model.fit(X,Y)\n"
+    "\n",
+    "n_iters = 10\n",
+    "k = 0.01\n",
+    "for i in range(n_iters):\n",
+    "    model.fit(X,Y)\n",
+    "    # Sample next point\n",
+    "    \n",
+    "    x1 = np.random.uniform(-3,3,5)\n",
+    "    x2 = np.random.uniform(-2,2,5)\n",
+    "    X_ = np.asarray([[x1],[x2]]).transpose().squeeze(1)\n",
+    "    "
    ],
    "outputs": [],
    "metadata": {}
