Problem 1 started w/o line search

--- a/Homework/Homework3.ipynb
+++ b/Homework/Homework3.ipynb
@@ -61,10 +61,66 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# Problem 1 : Least squares fitting for vapor-liquid equilibrium\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "SMOOTH = 1e-5\n",
+    "\n",
+    "\n",
+    "def model(X, A, p_sat):\n",
+    "    # Question : Temporary variables and the computational graph ...\n",
+    "    k1 = A[0]*(A[1]*X[1]/(A[0]*X[0] + A[1]*X[1]))\n",
+    "    k2 = A[1]*(A[0]*X[0]/(A[0]*X[0] + A[1]*X[1]))\n",
+    "    t1 = X[0]*torch.exp((k1**2))*p_sat[0]\n",
+    "    t2 = X[1]*torch.exp((k2**2))*p_sat[1]\n",
+    "    return t1 + t2\n",
+    "\n",
+    "\n",
+    "# Define the variables to be optimized over\n",
+    "A = torch.tensor([2.5,2.8], requires_grad = True, dtype = torch.float64)\n",
+    "# Data\n",
+    "X = np.asarray([np.arange(0,1.1,0.1), 1-np.arange(0,1.1,0.1)])\n",
+    "X = torch.from_numpy(X)\n",
+    "p = torch.tensor([28.1, 34.4, 36.7, 36.9, 36.8, 36.7, 36.5, 35.4, 32.9, 27.8, 17.5], requires_grad =  False, dtype = torch.float64)\n",
+    "\n",
+    "# Constants\n",
+    "# a = torch.tensor([[8.07131, 1730.63, 233.426],[7.43155, 1554.679, 240.337]], requires_grad= False)\n",
+    "# T = 20\n",
+    "# p_sat_water = torch.tensor(a[0][0] - (a[0][1]/(T + a[0][2])))\n",
+    "# p_sat_dioxane = torch.tensor(a[1][0] - (a[1][1]/(T + a[1][2])))\n",
+    "p_sat = torch.tensor([1.2424, 1.4598], requires_grad = False, dtype = torch.float64)\n",
+    "\n",
+    "alpha = 0.0001\n",
+    "for i in range(500):\n",
+    "    # Define the loss function\n",
+    "    loss = torch.sum((p - model(X, A, p_sat))**2)\n",
+    "    loss.backward()\n",
+    "    print(\"Alpha:\", alpha, \"Loss:\", loss.data.numpy(), \"Gradient:\", A.grad.numpy(), \"Parameter:\", A.data.numpy())\n",
+    "    with torch.no_grad():\n",
+    "        A -= alpha * A.grad\n",
+    "        A.grad.zero_()\n",
+    "    alpha /= 1.1\n",
+    "    \n",
+    "p_final = model(X, A, p_sat)\n",
+    "print(\"Model: \", p_final)\n",
+    "print(\"Truth: \", p)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# Problem 2: Bayesian Optimization\n",
     "import sklearn.gaussian_process as gp\n",
     "import numpy as np\n",
     "from scipy.stats import norm\n",
+    "from scipy.optimize import minimize\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "def objective(x, mean = 0, var = 0.1):\n",
     "    '''\n",
@@ -73,33 +129,33 @@
     "    var : scalar variance for iid noise term\n",
     "    '''\n",
     "    noise = np.random.normal(mean, var)    \n",
-    "    return ((4 - (2.1*(x[0]**2)) + ((x[0]**4)/3))*(x[0]**2)) + (x[0]*x[1]) + ((-4 + 4*x[1]**2)*x[1]**2) + noise\n",
+    "    return ((4 - (2.1*(x[0]**2)) + ((x[0]**4)/3))*(x[0]**2)) + (x[0]*x[1]) + ((-4 + 4*x[1]**2)*x[1]**2)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def expected_improvement(X_, X, model, k = 0.01):\n",
     "    Y_mu, Y_sigma = model.predict(X, return_std = True)\n",
-    "    Y__, _ = model.predict(X_)\n",
-    "    Y_sigma  = Y_sigma.reshape(-1,1)\n",
+    "    Y__= model.predict(X_)\n",
     "    \n",
     "    # Find the best value of predicted f(x) among the old samples\n",
-    "    y_best = np.max(Y__)\n",
-    "    if Y_sigma == 0.0:\n",
-    "        ei = 0\n",
-    "        return ei\n",
-    "    else:\n",
+    "    with np.errstate(divide='ignore'):\n",
+    "        y_best = np.max(Y_sigma)\n",
     "        Z = (Y_mu - y_best - k)/Y_sigma\n",
     "        ei = ((Y_mu - y_best - k)*norm.cdf(Z)) + (Y_sigma*norm.pdf(Z))\n",
-    "        return ei\n",
+    "        ei[Y_sigma == 0.0] = 0.0\n",
+    "    return X_[np.argmax(ei)]\n",
     "\n",
     "\n",
-    "\n",
+    "# optimize the expected improvement\n",
+    "# EI function is highly non linear\n",
     "\n",
     "x1 = np.random.uniform(-3,3,5)\n",
     "x2 = np.random.uniform(-2,2,5)\n",
     "X = np.asarray([[x1],[x2]]).transpose().squeeze(1)\n",
     "Y = np.asarray([objective(x) for x in X])\n",
     "\n",
-    "kernel = gp.kernels.RBF(length_scale=  )\n",
+    "kernel = gp.kernels.RBF()\n",
     "model = gp.GaussianProcessRegressor(kernel=kernel,\n",
     "                                    alpha=1e-4,\n",
     "                                    n_restarts_optimizer=0,\n",
@@ -109,122 +165,23 @@
     "k = 0.01\n",
     "for i in range(n_iters):\n",
     "    model.fit(X,Y)\n",
-    "    # Sample next point\n",
-    "    \n",
+    "    # Select next point using expected improvement\n",
     "    x1 = np.random.uniform(-3,3,5)\n",
     "    x2 = np.random.uniform(-2,2,5)\n",
     "    X_ = np.asarray([[x1],[x2]]).transpose().squeeze(1)\n",
-    "    "
+    "    x_next = expected_improvement(X_ = X_, X = X, model = model)\n",
+    "    y_next = objective(x_next)\n",
+    "    X.stack(x_next)\n",
+    "    Y.append(y_next)"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "source": [
-    "# A simple example of using PyTorch for gradient descent\n",
-    "\n",
-    "import torch as t\n",
-    "from torch.autograd import Variable\n",
-    "\n",
-    "# Define a variable, make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
-    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
-    "\n",
-    "# Define a loss\n",
-    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
-    "\n",
-    "# Take gradient\n",
-    "loss.backward()\n",
-    "\n",
-    "# Check the gradient. numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
-    "x.grad.numpy()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([ 0., -4.], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 41
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "source": [
-    "# Let's examine the gradient at a different x.\n",
-    "x.data = t.tensor([2.0, 1.0])\n",
-    "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
-    "loss.backward()\n",
-    "x.grad.numpy()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([ 2., -6.], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 42
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "source": [
-    "# Here is a code for gradient descent without line search\n",
-    "\n",
-    "import torch as t\n",
-    "from torch.autograd import Variable\n",
-    "\n",
-    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
-    "\n",
-    "# Fix the step size\n",
-    "a = 0.01\n",
-    "\n",
-    "# Start gradient descent\n",
-    "for i in range(1000):  # TODO: change the termination criterion\n",
-    "    loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
-    "    loss.backward()\n",
-    "    \n",
-    "    # no_grad() specifies that the operations within this context are not part of the computational graph, i.e., we don't need the gradient descent algorithm itself to be differentiable with respect to x\n",
-    "    with t.no_grad():\n",
-    "        x -= a * x.grad\n",
-    "        \n",
-    "        # need to clear the gradient at every step, or otherwise it will accumulate...\n",
-    "        x.grad.zero_()\n",
-    "        \n",
-    "print(x.data.numpy())\n",
-    "print(loss.data.numpy())"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[1.        1.9999971]\n",
-      "8.185452e-12\n"
-     ]
-    }
-   ],
    "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -237,6 +194,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "interpreter": {
+   "hash": "283a19fe1c80cc8d674e9be3676f3725f85ae6255e6112c9eba9160b54893d27"
   }
  },
  "nbformat": 4,
