--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -52,15 +52,44 @@
     "$$\n",
     "    \\min_{x_1, x_2} \\quad \\left(4-2.1x_1^2 + \\frac{x_1^4}{3}\\right)x_1^2 + x_1x_2 + \\left(-4 + 4x_2^2\\right)x_2^2,\n",
     "$$\n",
-    "for $x_1 \\in [-3,3]$ and $x_2 \\in [-2,2]$. A tutorial on Bayesian Optimization can be found [here](https://thuijskens.github.io/2016/12/29/bayesian-optimisation/).\n",
+    "for $x_1 \\in [-3,3]$ and $x_2 \\in [-2,2]$. A tutorial on Bayesian Optimization can be found [here](https://thuijskens.github.io/2016/12/29/bayesian-optimisation/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d66eb6",
+   "metadata": {},
+   "source": [
+    "Problem 1\n",
     "\n",
+    "Part 1\n",
     "\n",
-    "\n"
+    "The least square problem can be formulated as the expression below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f20ac9c7",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\min_{A_{12},A_{21}}\\sum_{i=1}^{11} (p(x_i;A_{12},A_{21})-p_i)^2\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60e94748",
+   "metadata": {},
+   "source": [
+    "Part 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "divine-setup",
    "metadata": {},
    "outputs": [
@@ -70,7 +99,7 @@
        "array([ 0., -4.], dtype=float32)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "positive-starter",
    "metadata": {},
    "outputs": [
@@ -106,7 +135,7 @@
        "array([ 2., -6.], dtype=float32)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "infectious-remark",
    "metadata": {},
    "outputs": [
@@ -129,53 +158,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.        1.9999971]\n",
-      "8.185452e-12\n"
+      "[1.9584198 1.6891851]\n",
+      "0.67019004\n"
      ]
     }
    ],
    "source": [
     "# Here is a code for gradient descent without line search\n",
     "\n",
+    "import math\n",
     "import torch as t\n",
     "from torch.autograd import Variable\n",
     "\n",
-    "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
+    "# Manipulating A\n",
+    "A = Variable(t.tensor([1.0, 2.0]), requires_grad=True)\n",
+    "\n",
+    "# Set up constants\n",
+    "a1_w = 8.07131\n",
+    "a2_w = 1730.63\n",
+    "a3_w = 233.426\n",
+    "a1_d = 7.43155\n",
+    "a2_d = 1554.679\n",
+    "a3_d = 240.337\n",
+    "\n",
+    "psat_w = 10**(a1_w - (a2_w/(20+a3_w)))\n",
+    "psat_d = 10**(a1_d - (a2_d/(20+a3_d)))\n",
+    "\n",
+    "x1 = t.tensor([0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0])\n",
+    "x2 = 1-x1\n",
+    "\n",
+    "pe = t.tensor([28.1, 34.4, 36.7, 36.9, 36.8, 36.7, 36.5, 35.4, 32.9, 27.7, 17.5])\n",
+    "pt = lambda A, x1, x2, psat_w, psat_d: x1*t.exp(A[0]*((A[1]*x2)/(A[0]*x1+A[1]*x2))**2)*psat_w + x2*t.exp(A[1]*((A[0]*x1)/(A[0]*x1+A[1]*x2))**2)*psat_d \n",
     "\n",
     "# Fix the step size\n",
-    "a = 0.01\n",
+    "a = 0.001\n",
     "\n",
     "# Start gradient descent\n",
     "for i in range(1000):  # TODO: change the termination criterion\n",
-    "    loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
+    "    loss = t.sum(t.square((pt(A,x1,x2,psat_w,psat_d)-pe)))\n",
     "    loss.backward()\n",
     "    \n",
     "    # no_grad() specifies that the operations within this context are not part of the computational graph, i.e., we don't need the gradient descent algorithm itself to be differentiable with respect to x\n",
     "    with t.no_grad():\n",
-    "        x -= a * x.grad\n",
+    "        A -= a * A.grad\n",
     "        \n",
     "        # need to clear the gradient at every step, or otherwise it will accumulate...\n",
-    "        x.grad.zero_()\n",
+    "        A.grad.zero_()\n",
     "        \n",
-    "print(x.data.numpy())\n",
+    "print(A.data.numpy())\n",
     "print(loss.data.numpy())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "painful-climb",
+   "cell_type": "markdown",
+   "id": "7479c2ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yren32\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the gradient for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "source": [
+    "Part 3\n",
+    "\n",
+    "The model fits relatively well with the data since the loss is a very small number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dabe3a37",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -195,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
