--- a/Homework/Homework 2.ipynb
+++ b/Homework/Homework 2.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09d8f49e",
+   "id": "04cb3fc5",
    "metadata": {},
    "source": [
     "![HW2P1](img/HW2P1.jpg)"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "802a8eda",
+   "id": "60b80a39",
    "metadata": {},
    "source": [
     "![HW2P2](img/HW2P2.jpg)"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5efa27f0",
+   "id": "b82dfae5",
    "metadata": {},
    "source": [
     "![HW2P3](img/HW2P3.jpg)"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d970ce71",
+   "id": "c2faf521",
    "metadata": {},
    "source": [
     "![HW2P4](img/HW2P4.jpg)"
@@ -170,16 +170,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd36a7a",
+   "id": "4ed58790",
    "metadata": {},
    "source": [
     "![HW2P5a](img/HW2P5a.jpg)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73254105",
+   "metadata": {},
+   "source": [
+    "![HW2P5_1](img/HW2P5_1.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2167df97",
+   "metadata": {},
+   "source": [
+    "![HW2P5_2](img/HW2P5_2.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff1d5946",
+   "id": "023d42cc",
    "metadata": {},
    "outputs": [],
    "source": []
