Problem 1 mostly done pt2

--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e94748",
+   "id": "eb5a67fc",
    "metadata": {},
    "source": [
     "Part 2"
@@ -105,15 +105,16 @@
     }
    ],
    "source": [
-    "# A simple example of using PyTorch for gradient descent\n",
+    "# Gradient Descent in PyTorch\n",
     "\n",
     "import torch as t\n",
     "from torch.autograd import Variable\n",
     "\n",
-    "# Define a variable, make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
+    "# Define a variable\n",
+    "# Make sure requires_grad=True so that PyTorch can take gradient with respect to this variable\n",
     "x = Variable(t.tensor([1.0, 0.0]), requires_grad=True)\n",
     "\n",
-    "# Define a loss\n",
+    "# Define loss\n",
     "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
     "\n",
     "# Take gradient\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "infectious-remark",
    "metadata": {},
    "outputs": [
@@ -159,7 +160,8 @@
      "output_type": "stream",
      "text": [
       "[1.9584198 1.6891851]\n",
-      "0.67019004\n"
+      "0.67019004\n",
+      "0.22339667876561484\n"
      ]
     }
    ],
@@ -206,12 +208,14 @@
     "        A.grad.zero_()\n",
     "        \n",
     "print(A.data.numpy())\n",
-    "print(loss.data.numpy())"
+    "print(loss.data.numpy())\n",
+    "calculation = loss.data.numpy()/3\n",
+    "print(calculation)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7479c2ca",
+   "id": "1dcf9734",
    "metadata": {},
    "source": [
     "Part 3\n",
@@ -222,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dabe3a37",
+   "id": "0c67d50d",
    "metadata": {},
    "outputs": [],
    "source": []
