--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -81,10 +81,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb5a67fc",
+   "id": "dea17d96",
    "metadata": {},
    "source": [
-    "Part 2"
+    "Part 2\n",
+    "\n",
+    "The values of A12 and A21 are estimated using gradient descent since the model is nonlinear. "
    ]
   },
   {
@@ -105,7 +107,7 @@
     }
    ],
    "source": [
-    "# Gradient Descent in PyTorch\n",
+    "# Gradient descent in PyTorch\n",
     "\n",
     "import torch as t\n",
     "from torch.autograd import Variable\n",
@@ -120,7 +122,8 @@
     "# Take gradient\n",
     "loss.backward()\n",
     "\n",
-    "# Check the gradient. numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
+    "# Check the gradient\n",
+    "# numpy() turns the variable from a PyTorch tensor to a numpy array.\n",
     "x.grad.numpy()"
    ]
   },
@@ -142,7 +145,7 @@
     }
    ],
    "source": [
-    "# Let's examine the gradient at a different x.\n",
+    "# Examine the gradient at a different x\n",
     "x.data = t.tensor([2.0, 1.0])\n",
     "loss = (x[0] - 1)**2 + (x[1] - 2)**2\n",
     "loss.backward()\n",
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "infectious-remark",
    "metadata": {},
    "outputs": [
@@ -159,23 +162,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.9584198 1.6891851]\n",
-      "0.67019004\n",
-      "0.22339667876561484\n"
+      "Estimates:\n",
+      "A12 =  1.9584198\n",
+      "A21 =  1.6891851\n"
      ]
     }
    ],
    "source": [
-    "# Here is a code for gradient descent without line search\n",
+    "# Dradient descent without line search\n",
     "\n",
     "import math\n",
     "import torch as t\n",
     "from torch.autograd import Variable\n",
     "\n",
-    "# Manipulating A\n",
+    "# Define variable A\n",
     "A = Variable(t.tensor([1.0, 2.0]), requires_grad=True)\n",
     "\n",
-    "# Set up constants\n",
+    "# Define constants\n",
     "a1_w = 8.07131\n",
     "a2_w = 1730.63\n",
     "a3_w = 233.426\n",
@@ -183,12 +186,15 @@
     "a2_d = 1554.679\n",
     "a3_d = 240.337\n",
     "\n",
+    "# Apply Antoine equation to calculate psat_water and psat_dioxane\n",
     "psat_w = 10**(a1_w - (a2_w/(20+a3_w)))\n",
     "psat_d = 10**(a1_d - (a2_d/(20+a3_d)))\n",
     "\n",
+    "# Define x1 and x2\n",
     "x1 = t.tensor([0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0])\n",
     "x2 = 1-x1\n",
     "\n",
+    "# Define p_experimental and p_theoretical\n",
     "pe = t.tensor([28.1, 34.4, 36.7, 36.9, 36.8, 36.7, 36.5, 35.4, 32.9, 27.7, 17.5])\n",
     "pt = lambda A, x1, x2, psat_w, psat_d: x1*t.exp(A[0]*((A[1]*x2)/(A[0]*x1+A[1]*x2))**2)*psat_w + x2*t.exp(A[1]*((A[0]*x1)/(A[0]*x1+A[1]*x2))**2)*psat_d \n",
     "\n",
@@ -196,7 +202,7 @@
     "a = 0.001\n",
     "\n",
     "# Start gradient descent\n",
-    "for i in range(1000):  # TODO: change the termination criterion\n",
+    "for i in range(2000):\n",
     "    loss = t.sum(t.square((pt(A,x1,x2,psat_w,psat_d)-pe)))\n",
     "    loss.backward()\n",
     "    \n",
@@ -206,27 +212,271 @@
     "        \n",
     "        # need to clear the gradient at every step, or otherwise it will accumulate...\n",
     "        A.grad.zero_()\n",
-    "        \n",
-    "print(A.data.numpy())\n",
-    "print(loss.data.numpy())\n",
-    "calculation = loss.data.numpy()/3\n",
-    "print(calculation)"
+    "\n",
+    "# Display results\n",
+    "print(\"Estimates:\")\n",
+    "print(\"A12 = \", A.data.numpy()[0])\n",
+    "print(\"A21 = \", A.data.numpy()[1])\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1dcf9734",
+   "id": "6f7892ce",
    "metadata": {},
    "source": [
-    "Part 3\n",
-    "\n",
+    "Part 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1b73169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss =  0.67019004\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Loss = \", loss.data.numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03e257ad",
+   "metadata": {},
+   "source": [
     "The model fits relatively well with the data since the loss is a very small number. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47ecbf8b",
+   "metadata": {},
+   "source": [
+    "Problem 2\n",
+    "\n",
+    "The minimization problem is solved using Bayesian Optimization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "237e68ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimates for [x1, x2]:\n",
+      "(array([[ 2.57157507, -0.3632165 ],\n",
+      "       [-2.07092397, -1.02549317],\n",
+      "       [-0.17786188,  1.64091117],\n",
+      "       [ 1.73425735,  1.20816725],\n",
+      "       [-0.39074682,  0.99437679],\n",
+      "       [-0.16194553,  1.60689751],\n",
+      "       [ 2.63714784, -0.48593251],\n",
+      "       [ 2.71729554, -0.63591038],\n",
+      "       [ 2.82305354, -0.83344957],\n",
+      "       [ 2.95115558, -1.07115042]]), array([29.62252267,  7.1645976 , 18.06238694,  6.8822367 ,  0.13005762,\n",
+      "       16.18412553, 36.36780781, 46.53736792, 64.02607849, 93.26988356]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bayesian optimization of loss functions\n",
+    "\n",
+    "import numpy as np\n",
+    "import sklearn.gaussian_process as gp\n",
+    "\n",
+    "from scipy.stats import norm\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "def expected_improvement(x, gaussian_process, evaluated_loss, greater_is_better=False, n_params=1):\n",
+    "    \"\"\" expected_improvement\n",
+    "\n",
+    "    Expected improvement acquisition function.\n",
+    "\n",
+    "    Arguments:\n",
+    "    ----------\n",
+    "        x: array-like, shape = [n_samples, n_hyperparams]\n",
+    "            The point for which the expected improvement needs to be computed.\n",
+    "        gaussian_process: GaussianProcessRegressor object.\n",
+    "            Gaussian process trained on previously evaluated hyperparameters.\n",
+    "        evaluated_loss: Numpy array.\n",
+    "            Numpy array that contains the values off the loss function for the previously\n",
+    "            evaluated hyperparameters.\n",
+    "        greater_is_better: Boolean.\n",
+    "            Boolean flag that indicates whether the loss function is to be maximised or minimised.\n",
+    "        n_params: int.\n",
+    "            Dimension of the hyperparameter space.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    x_to_predict = x.reshape(-1, n_params)\n",
+    "\n",
+    "    mu, sigma = gaussian_process.predict(x_to_predict, return_std=True)\n",
+    "\n",
+    "    if greater_is_better:\n",
+    "        loss_optimum = np.max(evaluated_loss)\n",
+    "    else:\n",
+    "        loss_optimum = np.min(evaluated_loss)\n",
+    "\n",
+    "    scaling_factor = (-1) ** (not greater_is_better)\n",
+    "\n",
+    "    # In case sigma equals zero\n",
+    "    with np.errstate(divide='ignore'):\n",
+    "        Z = scaling_factor * (mu - loss_optimum) / sigma\n",
+    "        expected_improvement = scaling_factor * (mu - loss_optimum) * norm.cdf(Z) + sigma * norm.pdf(Z)\n",
+    "        expected_improvement[sigma == 0.0] == 0.0\n",
+    "\n",
+    "    return -1 * expected_improvement\n",
+    "\n",
+    "\n",
+    "def sample_next_hyperparameter(acquisition_func, gaussian_process, evaluated_loss, greater_is_better=False,\n",
+    "                               bounds=(0, 10), n_restarts=25):\n",
+    "    \"\"\" sample_next_hyperparameter\n",
+    "\n",
+    "    Proposes the next hyperparameter to sample the loss function for.\n",
+    "\n",
+    "    Arguments:\n",
+    "    ----------\n",
+    "        acquisition_func: function.\n",
+    "            Acquisition function to optimize.\n",
+    "        gaussian_process: GaussianProcessRegressor object.\n",
+    "            Gaussian process trained on previously evaluated hyperparameters.\n",
+    "        evaluated_loss: array-like, shape = [n_obs,]\n",
+    "            Numpy array that contains the values off the loss function for the previously\n",
+    "            evaluated hyperparameters.\n",
+    "        greater_is_better: Boolean.\n",
+    "            Boolean flag that indicates whether the loss function is to be maximised or minimised.\n",
+    "        bounds: Tuple.\n",
+    "            Bounds for the L-BFGS optimizer.\n",
+    "        n_restarts: integer.\n",
+    "            Number of times to run the minimiser with different starting points.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    best_x = None\n",
+    "    best_acquisition_value = 1\n",
+    "    n_params = bounds.shape[0]\n",
+    "\n",
+    "    for starting_point in np.random.uniform(bounds[:, 0], bounds[:, 1], size=(n_restarts, n_params)):\n",
+    "\n",
+    "        res = minimize(fun=acquisition_func,\n",
+    "                       x0=starting_point.reshape(1, -1),\n",
+    "                       bounds=bounds,\n",
+    "                       method='L-BFGS-B',\n",
+    "                       args=(gaussian_process, evaluated_loss, greater_is_better, n_params))\n",
+    "\n",
+    "        if res.fun < best_acquisition_value:\n",
+    "            best_acquisition_value = res.fun\n",
+    "            best_x = res.x\n",
+    "\n",
+    "    return best_x\n",
+    "\n",
+    "\n",
+    "def bayesian_optimization(n_iters, sample_loss, bounds, x0=None, n_pre_samples=5,\n",
+    "                          gp_params=None, random_search=False, alpha=1e-5, epsilon=1e-7):\n",
+    "    \"\"\" bayesian_optimization\n",
+    "\n",
+    "    Uses Gaussian Processes to optimize the loss function `sample_loss`.\n",
+    "\n",
+    "    Arguments:\n",
+    "    ----------\n",
+    "        n_iters: integer.\n",
+    "            Number of iterations to run the search algorithm.\n",
+    "        sample_loss: function.\n",
+    "            Function to be optimized.\n",
+    "        bounds: array-like, shape = [n_params, 2].\n",
+    "            Lower and upper bounds on the parameters of the function `sample_loss`.\n",
+    "        x0: array-like, shape = [n_pre_samples, n_params].\n",
+    "            Array of initial points to sample the loss function for. If None, randomly\n",
+    "            samples from the loss function.\n",
+    "        n_pre_samples: integer.\n",
+    "            If x0 is None, samples `n_pre_samples` initial points from the loss function.\n",
+    "        gp_params: dictionary.\n",
+    "            Dictionary of parameters to pass on to the underlying Gaussian Process.\n",
+    "        random_search: integer.\n",
+    "            Flag that indicates whether to perform random search or L-BFGS-B optimization\n",
+    "            over the acquisition function.\n",
+    "        alpha: double.\n",
+    "            Variance of the error term of the GP.\n",
+    "        epsilon: double.\n",
+    "            Precision tolerance for floats.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    x_list = []\n",
+    "    y_list = []\n",
+    "\n",
+    "    n_params = bounds.shape[0]\n",
+    "\n",
+    "    if x0 is None:\n",
+    "        for params in np.random.uniform(bounds[:, 0], bounds[:, 1], (n_pre_samples, bounds.shape[0])):\n",
+    "            x_list.append(params)\n",
+    "            y_list.append(sample_loss(params))\n",
+    "    else:\n",
+    "        for params in x0:\n",
+    "            x_list.append(params)\n",
+    "            y_list.append(sample_loss(params))\n",
+    "\n",
+    "    xp = np.array(x_list)\n",
+    "    yp = np.array(y_list)\n",
+    "\n",
+    "    # Create the GP\n",
+    "    if gp_params is not None:\n",
+    "        model = gp.GaussianProcessRegressor(**gp_params)\n",
+    "    else:\n",
+    "        kernel = gp.kernels.Matern()\n",
+    "        model = gp.GaussianProcessRegressor(kernel=kernel,\n",
+    "                                            alpha=alpha,\n",
+    "                                            n_restarts_optimizer=10,\n",
+    "                                            normalize_y=True)\n",
+    "\n",
+    "    for n in range(n_iters):\n",
+    "\n",
+    "        model.fit(xp, yp)\n",
+    "\n",
+    "        # Sample next hyperparameter\n",
+    "        if random_search:\n",
+    "            x_random = np.random.uniform(bounds[:, 0], bounds[:, 1], size=(random_search, n_params))\n",
+    "            ei = -1 * expected_improvement(x_random, model, yp, greater_is_better=True, n_params=n_params)\n",
+    "            next_sample = x_random[np.argmax(ei), :]\n",
+    "        else:\n",
+    "            next_sample = sample_next_hyperparameter(expected_improvement, model, yp, greater_is_better=True, bounds=bounds, n_restarts=100)\n",
+    "\n",
+    "        # Duplicates will break the GP. In case of a duplicate, we will randomly sample a next query point.\n",
+    "        if np.any(np.abs(next_sample - xp) <= epsilon):\n",
+    "            next_sample = np.random.uniform(bounds[:, 0], bounds[:, 1], bounds.shape[0])\n",
+    "\n",
+    "        # Sample loss for new set of parameters\n",
+    "        cv_score = sample_loss(next_sample)\n",
+    "\n",
+    "        # Update lists\n",
+    "        x_list.append(next_sample)\n",
+    "        y_list.append(cv_score)\n",
+    "\n",
+    "        # Update xp and yp\n",
+    "        xp = np.array(x_list)\n",
+    "        yp = np.array(y_list)\n",
+    "\n",
+    "    return xp, yp\n",
+    "\n",
+    "objFun = lambda x: (4-2.1*x[0]**2+(x[0]**4/3))*x[0]**2+x[0]*x[1]+(-4+4*x[1]**2)*x[1]**2\n",
+    "bounds = np.array([[-3, 3], [-2, 2]])\n",
+    "estimates = bayesian_optimization(5, objFun , bounds, x0=None, n_pre_samples=5, gp_params=None, random_search=False, alpha=1e-5, epsilon=1e-7)\n",
+    "print(\"Estimates for [x1, x2]:\")\n",
+    "print(estimates)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c67d50d",
+   "id": "42f10bdf",
    "metadata": {},
    "outputs": [],
    "source": []
