Problem 2 explanation added, Problem 1 explanation improved

--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -81,7 +81,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea17d96",
+   "id": "9c69a278",
+   "metadata": {},
+   "source": [
+    "This loss function minimizes the summation of error squared. Error is considered to be the difference between theoretical and experimental values for the data points given in the problem statement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eaa17e7",
    "metadata": {},
    "source": [
     "Part 2\n",
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "divine-setup",
    "metadata": {},
    "outputs": [
@@ -101,7 +109,7 @@
        "array([ 0., -4.], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "positive-starter",
    "metadata": {},
    "outputs": [
@@ -139,7 +147,7 @@
        "array([ 2., -6.], dtype=float32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "infectious-remark",
    "metadata": {},
    "outputs": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7892ce",
+   "id": "a195941e",
    "metadata": {},
    "source": [
     "Part 3"
@@ -229,33 +237,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "1b73169b",
+   "execution_count": 6,
+   "id": "39cb4222",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss =  0.67019004\n"
+      "Loss =  0.67019004\n",
+      "RSE =  0.22339668\n"
      ]
     }
    ],
    "source": [
-    "print(\"Loss = \", loss.data.numpy())"
+    "# Determine loss\n",
+    "print(\"Loss = \", loss.data.numpy())\n",
+    "\n",
+    "# Determine Risidual Standard Error\n",
+    "# Divide loss by square root of n = 11 samples minus DoF = 2\n",
+    "print(\"RSE = \", round(loss.data.numpy()/3,8)) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "03e257ad",
+   "id": "75a82176",
    "metadata": {},
    "source": [
-    "The model fits relatively well with the data since the loss is a very small number. "
+    "The model fits relatively well with the data since the loss is a very small number considering the 11 data points of which we are minimizing our function. Note that the residual standard error for pressure values is 0.223 mmHg. The pressure data points range from 17 to 37 mmHg, so the error is small."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "47ecbf8b",
+   "id": "d5f5a9c3",
    "metadata": {},
    "source": [
     "Problem 2\n",
@@ -265,26 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "237e68ae",
+   "execution_count": 11,
+   "id": "524dc4cf",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Programs\\Anaconda\\lib\\site-packages\\sklearn\\gaussian_process\\kernels.py:402: ConvergenceWarning: The optimal value found for dimension 0 of parameter length_scale is close to the specified lower bound 1e-05. Decreasing the bound and calling fit again may find a better value.\n",
+      "  warnings.warn(\"The optimal value found for \"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimates for [x1, x2]:\n",
-      "(array([[ 2.57157507, -0.3632165 ],\n",
-      "       [-2.07092397, -1.02549317],\n",
-      "       [-0.17786188,  1.64091117],\n",
-      "       [ 1.73425735,  1.20816725],\n",
-      "       [-0.39074682,  0.99437679],\n",
-      "       [-0.16194553,  1.60689751],\n",
-      "       [ 2.63714784, -0.48593251],\n",
-      "       [ 2.71729554, -0.63591038],\n",
-      "       [ 2.82305354, -0.83344957],\n",
-      "       [ 2.95115558, -1.07115042]]), array([29.62252267,  7.1645976 , 18.06238694,  6.8822367 ,  0.13005762,\n",
-      "       16.18412553, 36.36780781, 46.53736792, 64.02607849, 93.26988356]))\n"
+      "Minimized x1 =  -0.18119547510164777\n",
+      "Minimized x2 =  -1.0524365284655723\n",
+      "Minimized loss =  0.7965932093316401\n"
      ]
     }
    ],
@@ -447,7 +460,7 @@
     "            ei = -1 * expected_improvement(x_random, model, yp, greater_is_better=True, n_params=n_params)\n",
     "            next_sample = x_random[np.argmax(ei), :]\n",
     "        else:\n",
-    "            next_sample = sample_next_hyperparameter(expected_improvement, model, yp, greater_is_better=True, bounds=bounds, n_restarts=100)\n",
+    "            next_sample = sample_next_hyperparameter(expected_improvement, model, yp, greater_is_better=False, bounds=bounds, n_restarts=100)\n",
     "\n",
     "        # Duplicates will break the GP. In case of a duplicate, we will randomly sample a next query point.\n",
     "        if np.any(np.abs(next_sample - xp) <= epsilon):\n",
@@ -468,18 +481,29 @@
     "\n",
     "objFun = lambda x: (4-2.1*x[0]**2+(x[0]**4/3))*x[0]**2+x[0]*x[1]+(-4+4*x[1]**2)*x[1]**2\n",
     "bounds = np.array([[-3, 3], [-2, 2]])\n",
-    "estimates = bayesian_optimization(5, objFun , bounds, x0=None, n_pre_samples=5, gp_params=None, random_search=False, alpha=1e-5, epsilon=1e-7)\n",
-    "print(\"Estimates for [x1, x2]:\")\n",
-    "print(estimates)"
+    "x, loss = bayesian_optimization(100, objFun , bounds, x0=None, n_pre_samples=5, gp_params=None, random_search=False, alpha=1e-5, epsilon=1e-7)\n",
+    "\n",
+    "# Print last iteration of x1 and x2  \n",
+    "print('Minimized x1 = ', x[-1,0])\n",
+    "print('Minimized x2 = ', x[-1,1])\n",
+    "print('Minimized loss = ', loss[-1])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42f10bdf",
+   "cell_type": "markdown",
+   "id": "dc5849e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![model](img/model.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be76e1d",
+   "metadata": {},
+   "source": [
+    "The loss will converge to nearly 0. As seen in the image above for a visual model of this function, there are many points that can be considered minimized for the function. On the last iteration of Bayesian Optimization, one of the possible set of results for x1, x2, and loss are displayed above. "
+   ]
   }
  ],
  "metadata": {
