Fixed Problem 2 image again

--- a/Homework/Homework 3.ipynb
+++ b/Homework/Homework 3.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a3686d",
+   "id": "869c60df",
    "metadata": {},
    "source": [
     "This loss function minimizes the summation of error squared. Error is considered to be the difference between theoretical and experimental values for the data points given in the problem statement."
@@ -491,15 +491,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11d3f0ac",
+   "id": "c7d6319a",
    "metadata": {},
    "source": [
-    "![HW3P2](img/HW3P2.jpeg)"
+    "![HW3P2](img/HW3P2.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c5106bf6",
+   "id": "66c9596a",
    "metadata": {},
    "source": [
     "The loss will converge to nearly 0. As seen in the image above for a visual model of this function, there are many points that can be considered minimized for the function. On the last iteration of Bayesian Optimization, one of the possible set of results for x1, x2, and loss are displayed above. "
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2753149",
+   "id": "72bc886a",
    "metadata": {},
    "outputs": [],
    "source": []
